--- a/src/app/components/apply/apply.component.scss
+++ b/src/app/components/apply/apply.component.scss
@@ -10,6 +10,9 @@
             margin-right: 1px;
         }
     }
+    a{
+        text-decoration: none;
+    }
 }
 .leave-form {
     background-color: white;
