--- a/src/styles.scss
+++ b/src/styles.scss
@@ -219,3 +219,19 @@ button:focus {
   }
 
 }
+// .mat-form-field-appearance-legacy .mat-form-field-underline {
+//   background-color:#70aade;
+// }
+.mat-form-field.mat-focused .mat-form-field-label{
+  color:#70aade;
+}
+.mat-form-field.mat-focused .mat-form-field-ripple{
+  background-color: #70aade;
+}
+.mat-form-field-appearance-outline .mat-form-field-outline-thick {
+  color: rgba(0,0,0,.12);
+}
+.mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick{
+color: #70aade;
+
+}
