some changes in record component

--- a/src/app/components/record/record.component.html
+++ b/src/app/components/record/record.component.html
@@ -186,14 +186,20 @@
                         <hr>
                         <p style="margin-bottom: 4px;">20th Jan 2019 - 21th Jan 2020<span class="day">2 Days</span></p>
                         <p class="date">Applied on <span style="color: black;">19th Jan, 2020, 1:03pm</span></p>
-                        <div class="reason">
-                            <span>"Dengue fever"</span>
-                        </div>
-                        <form class="example-form ">
-                            <mat-form-field class="example-full-width" appearance="outline">
-                                <textarea matInput placeholder="Add comments"></textarea>
-                            </mat-form-field>
-                        </form>
+                        
+                                <div class="reason">
+                                        <span>"Dengue fever"</span>
+                                    </div>
+
+                        
+                       
+                       
+                        <mat-form-field appearance="outline"> 
+                                <mat-label>Add comments</mat-label>
+                                <textarea matInput placeholder=""></textarea>
+                              </mat-form-field>
+                           
+                        
                         <hr>
                         <div class="result">
                            
