--- a/src/app/components/record/record.component.scss
+++ b/src/app/components/record/record.component.scss
@@ -57,13 +57,15 @@
 .philip {
 	color: #8d8383;
 }
-
+.box{
+	width: 73%;
+}
 .reason {
 	background-color: #f0f2f7;
-	max-width: 93%;
-	height: 52px;
+	width: 347px;
+	
 	padding: 14px;
-	margin-top: 14px;
+	
     margin-bottom: 14px;
 }
 
