--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,4 @@
+<div class="main-div">
 <section class="heading">
                 <div class="dot">
                     S
@@ -6,12 +7,7 @@
     
                     </div>
                 </div>
-                
 
-              
-
-                
-                
                 <p><a href="#" class="upload">Change your profile picture</a></p>
                 <h5>Samuel Smith</h5>
             
@@ -63,3 +59,5 @@
                 </div>
             
             </section>
+
+        </div>
