notification component updated

--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -59,81 +59,216 @@
 <section class="notificationsection">
 
         <div  class="apply-header">
-                <div  class="header clearfix">
+                <div  class="header">
                     <div class="text">
                         <h2>Notifications</h2>
                     </div>
-                    <div class="button"> 
+                    
+                      
+                   
+                    <div>
+                        <a href="#" class="clear">Mark all as read</a> 
+                        <a href="#" class="clear">Clear all</a> 
+                            <!-- <span>Mark </span> 
+                       <span class="clear"> Clear all</span>  -->
+                    </div>
+                    <!-- <div class="button"> 
             
                          <a mat-flat-button clearbutton class="clearbutton">Clear all</a>
+            </div> -->
             </div>
             </div>
-            </div>
-   <div class="notification">
-        <div class="notify-inner pd special"> 
-                <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+   <div class="notification ">
+        <!-- <div class="notify-inner pd special">  -->
+            <div class="person">
+                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
 
-                Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing elit rem quasi 
-                magnum veniam sapiente,fugiati fuga nesiati dolorum nulla magnum lorem ipsum sit amet consectetur.
-                <i class="material-icons cross"> close </i>
+
             </div>
-        
+                <div class="para">
+                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+                       
+
+                </div>
+               
+                
+
+               
+            <!-- </div> -->
+            <i class="material-icons cross"> close </i>
+
    </div>
+   <div class="second">
+        <i class="material-icons clock">
+                access_time
+                </i>
+        <p>a few seconds ago</p>
 
-   <div class="notification">
-        <div class="notify-inner pd special"> 
-                <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+</div>
 
-                Smith has applied for <span> 3 days </span>leave.
-                <i class="material-icons cross"> close </i>
+<div class="notification ">
+        <!-- <div class="notify-inner pd special">  -->
+            <div class="person">
+                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+
+
             </div>
+                <div class="para">
+                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+                       
+
+                </div>
+               
+                
+
+               
+            <!-- </div> -->
+            <i class="material-icons cross"> close </i>
+
    </div>
+   <div class="second">
+        <i class="material-icons clock">
+                access_time
+                </i>
+        <p> a few seconds ago</p>
 
-   <div class="notification">
-        <div class="notify-inner pd special"> 
-                <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+</div>
 
-                Smith has applied for <span> 3 days </span>leave.
-                <i class="material-icons cross"> close </i>
+<div class="notification ">
+        <!-- <div class="notify-inner pd special">  -->
+            <div class="person">
+                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+
+
             </div>
+                <div class="para">
+                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+                       
+
+                </div>
+               
+                
+
+               
+            <!-- </div> -->
+            <i class="material-icons cross"> close </i>
+
    </div>
+   <div class="second">
+        <i class="material-icons clock">
+                access_time
+                </i>
+        <p>a few seconds ago</p>
 
-   <div class="notification">
-        <div class="notify-inner pd special"> 
-                <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+</div>
+<div class="notification ">
+        <!-- <div class="notify-inner pd special">  -->
+            <div class="person">
+                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
 
-                Smith has applied for <span> 3 days </span>leave.
-                <i class="material-icons cross"> close </i>
+
             </div>
+                <div class="para">
+                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+                       
+
+                </div>
+               
+                
+
+               
+            <!-- </div> -->
+            <i class="material-icons cross"> close </i>
+
    </div>
+   <div class="second">
+        <i class="material-icons clock">
+                access_time
+                </i>
+        <p>a few seconds ago</p>
 
-   <div class="notification">
-        <div class="notify-inner pd special"> 
-                <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+</div>
 
-                Smith has applied for <span> 3 days </span> leave.
-                <i class="material-icons cross"> close </i>
+<div class="notification ">
+        <!-- <div class="notify-inner pd special">  -->
+            <div class="person">
+                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+
+
             </div>
-            
+                <div class="para">
+                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+                       
+
+                </div>
+               
+                
+
+               
+            <!-- </div> -->
+            <i class="material-icons cross"> close </i>
+
    </div>
+   <div class="second">
+        <i class="material-icons clock">
+                access_time
+                </i>
+        <p>a few seconds ago</p>
 
-   <div class="notification">
-        <div class="notify-inner pd special"> 
-                <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+</div>
+<div class="notification ">
+        <!-- <div class="notify-inner pd special">  -->
+            <div class="person">
+                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
 
-                Smith has applied for <span> 3 days </span> leave.
-                <i class="material-icons cross"> close </i>
+
             </div>
-            
+                <div class="para">
+                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+                       
+
+                </div>
+               
+                
+
+               
+            <!-- </div> -->
+            <i class="material-icons cross"> close </i>
+
    </div>
+   <div class="second">
+        <i class="material-icons clock">
+                access_time
+                </i>
+        <p>a few seconds ago</p>
 
-   <div class="notification">
-        <div class="notify-inner pd special"> 
-                <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+</div>
 
-                Smith has applied for <span> 3 days </span> leave.
-                <i class="material-icons cross"> close </i>
+<div class="notification ">
+        <!-- <div class="notify-inner pd special">  -->
+            <div class="person">
+                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
+
+
             </div>
-            
+                <div class="para">
+                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+                       
+
+                </div>
+               
+                
+
+               
+            <!-- </div> -->
+            <i class="material-icons cross"> close </i>
+
    </div>
+   <div class="second">
+        <i class="material-icons clock">
+                access_time
+                </i>
+        <p>a few seconds ago</p>
+
+</div>
 </section>
