--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -77,16 +77,24 @@
                   <h6>Isabela Phelaps</h6>
                   <h6 class="date"><span>20th Jan 2020</span> - <span>21th Jan 2019</span></h6>
                   <div class="down-row d-flex">
-                    <div class="cause">
-                      <span>6 Day</span>
-                      <span class="dot sick-dot"></span>
-                      <span>Sick</span>
+                    <div class="row">
+                      <div class="col-6">
+                          <div class="cause">
+                              <span>6 Day</span>
+                              <span class="dot sick-dot"></span>
+                              <span class="fix-width">Sick</span>
+                            </div>
+                      </div>
+                      <div class="col-6">
+                          <div class="accept">
+                              <div class="box box-reject">Reject</div>
+                              <div class="box box-accept">Accept</div>
+                            </div>
+                          </div>
+                      </div>
                     </div>
-                    <div class="accept">
-                      <div class="box box-reject">Reject</div>
-                      <div class="box box-accept">Accept</div>
-                    </div>
-                  </div>
+                    
+                    
                 </div>
               </div>
             </div>
