--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -149,7 +149,6 @@ border-color: #03a9f4!important;
 .accept {
 	display: flex;
 	align-items: center;
-	width: 140px;
 .box {
 	height: 27px;
 	width: 60px;
@@ -180,7 +179,6 @@ border-color: #03a9f4!important;
 	display: flex;
 	justify-content: space-between;
 }
-
-.cause {
-width: 155px;
-}
+// .fix-width {
+// 	width: 35px;
+// }
