--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,10 @@ ng-sidebar-container {
 }
 
 .header {
-  margin-bottom: 30px;
+     background-color: white;
+     padding: 12px 20px;
+     margin-bottom: 30px;
+     margin-top: 1px;
   .text {
     float: left;
     font-size: 26px;
