--- a/src/app/components/holidays/holidays.component.scss
+++ b/src/app/components/holidays/holidays.component.scss
@@ -3,11 +3,19 @@
     background-color: #F0F2F7;
     height: 100vh;
    
-    
+    .table-header-main {
+      padding: 0px 20px;
+      background: white;
+      height: 150px;
+    }
     .table-header {
       width: 100%;
+      border-radius: 4px;
+      background: #2c3e50;
       display: flex;
-      justify-content: center;
+      align-items: center;
+      height: 85px;
+      // justify-content: center;
     .year-select {
       width: 33%;
       // float: left;
@@ -178,6 +186,6 @@ table th, td {
   color: white;}
   
 .backbutton{
-  background-color: #23b9fc;
+  background-color: #2c3e50;
     color: white;
 }
