--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -119,7 +119,7 @@
         }
       }
       nav { 
-        background-color: #F0F2F7;
+        background-color: white;
       //   padding: 0px 20px 0px 0px;
       //   height: 50px;
       //   background-color: #F0F2F7;
@@ -134,16 +134,16 @@
         .icons-div {
           text-align: right;
           display: inline-flex;
-          padding-right: 20px
         }
         i {
-          color: #5A5A5A;
+          color: #2c3e50;
           font-size: 24px;
         }
         
         span {
           position: relative;
-          padding: 19px 10px 0px 10px;
+          padding: 16px 10px 2px 10px;
+          border-radius: 4px;
           margin: 5px;
           &:hover {
             background-color:#E7E9ED;
